cargo-features = ["profile-rustflags"]

[package]
name = "spelling_bee"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
rayon = "1.5"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
lto = "fat"
strip = true
panic = "abort"
codegen-units = 1
rustflags = ["-Ctarget-cpu=native"]

[workspace]
members = ["generator"]
